static/trustly/css/pages/user/interactive/cs-homepage.css
/* ... */
.home__search-button--right-spacing {
    margin-left: 10px;
}

.home__search-button--lucky-visibility {
    visibility: visible;
}

.home__search-button--left-spacing {
    margin-left: 5px;
}

.home__line-style {
    display: none;
}

.home__reference_links {
    color: #bfbfbf;
    text-align: center;
    font-size: 14px;
    max-width: 460px;
    font-weight: bold;
    border: 1px solid #e6e6e6;
    border-radius: 5px;
    padding-top: 14px;
    padding-bottom: 14px;
    margin: 10px auto 50px;
    width: 89%;
}

.home__reference_container {
    margin-top: 40px;
    width: 75%;
    margin-left: auto;
    margin-right: auto;
}

.home__reference_wrapper {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    gap: 10px;
}

.home__reference {
    align-self: center;
    height: 180px;
    padding: 10px 0 0;
    border-radius: 8px;
    outline: none;
    border: 1px solid #f0f0f0;
    box-shadow: 0 3px 3px 0 #cccccc;
    width: 91%;
    max-width: 575px;
    display: block;
    font: 16px arial, sans-serif;
    color: black;
    margin: -15px auto 45px;
    border-bottom: 6px solid #f9f9f9;
    background: #f9f9f9;
}

.home__reference:hover {
    animation-name: home__reference-animate-hover;
    animation-duration: 4s;
    transition: border-bottom-color 0.25s ease-in-out;
    border-bottom: 6px solid #548ec4;
    animation-fill-mode: forwards;
}

@keyframes home__reference-animate-hover {
    10% {
        background-color: #f0f4fa;
        box-shadow: 0 8px 8px 0 #cccccc;
    }
}

.home__reference--header {
    font-weight: bold;
    text-align: center;
    font-size: 14px;
    color: #ffffff;
    cursor: pointer;
    width: auto;
    border-top-right-radius: 8px;
    border-bottom-right-radius: 8px;
    float: left;
    margin-top: 10px;
    border-left: 6px solid #548ec4;
    background-color: #8db4d8;
    margin-left: -1px;
    display: flex;
    padding: 11px 20px 11px 10px;
}

.home__reference_info {
    margin-left: 15px;
    margin-right: 15px;
    line-height: 18px;
    color: #8c8c8c;
    font-size: 14px;
    margin-top: 60px;
}

.home__reference-image-container {
    width: 28px;
    height: 28px;
    border-radius: 5px;
    align-content: center;
    background: #e6e6e6;
    margin-left: 15px;
    float: left;
}

.home__reference-image {
    max-width: 24px;
    max-height: 24px;
    margin-top: 2px;
    margin-left: 2px;
    border-radius: 5px;
    font-size: 16px;
    color: darkgray;
    float: left;
}

.home__reference-status {
    margin-left: 25px;
    margin-right: 15px;
    line-height: 18px;
    color: #8c8c8c;
    font-size: 14px;
    padding-top: 4px;
    padding-left: 30px;
}

.home__reference-status--color {
    color: forestgreen;
}

@media only screen and (max-width: 1743px) {
    .home__reference_container {
        width: 80%;
    }

    .home__reference_wrapper {
        grid-template-columns: repeat(2, 1fr);
    }

    .home__reference {
        height: 200px;
    }
}

/*.home__search-container {*/
/*    margin-bottom: 300px;*/
/*}*/

.search__form {
    margin: 215px auto;
    display: grid;
    justify-content: center;
    align-content: center;
}

/*@media (max-width: 1200px) {*/
/*    .search__form {*/
/*        width: 40%; !* For medium-sized screens *!*/
/*    }*/
/*}*/

/*@media (max-width: 768px) {*/
/*    .search__form {*/
/*        width: 60%; !* For tablets *!*/
/*    }*/
/*}*/
html {
    overflow: scroll;
    scrollbar-width: none; /* For Firefox */
}

html::-webkit-scrollbar {
    display: none; /* For Chrome, Safari, and Edge */
}

/*@media (max-width: 480px) {*/
/*    .search__form {*/
/*        width: 90%; !* For small screens (phones) *!*/
/*    }*/
/*}*/


.flex-container {
    display: flex;
    flex-wrap: wrap;
    gap: 20px; /* Adjust the spacing between items */
    margin: 0 auto;
    padding: 16px 100px;
    justify-content: space-between;
}

.flex-item {
    background-color: #144372; /* Background color for each div */
    color: white; /* Text color */
    padding: 24px; /* Padding inside each parent div */
    border-radius: 8px; /* Rounded corners for each div */
    display: flex;
    align-items: center; /* Align child content vertically */
    justify-content: center; /* Center child content horizontally */
    flex: 1 1 calc(25% - 16px); /* 4 items per row */
    /*max-width: calc(25% - 24px);*/
    box-sizing: border-box;
}

.item-content {
    display: flex;
    align-items: center; /* Align children vertically */
    justify-content: space-between; /* Horizontal alignment */
    width: 100%; /* Ensure full width inside the parent div */
}


.item-icon {
    width: 18%;
    flex-shrink: 0; /* Prevent icon from shrinking */
    padding-right: 12px; /* Space between icon and text */
}

.item-icon img {
    width: 32px;
    height: 32px;
}

.item-text {
    width: 33%;
    display: flex;
    flex-direction: column; /* Stack text vertically */
}

.item-percentage {
    width: 50%;
    display: flex;
    justify-content: end;
}

.item-text-primary {
    font-size: 32px;
    font-weight: 700;
    color: #ffffff;
}

.item-text-secondary {
    font-size: 16px;
    color: #ffffff; /* Secondary text color */
    font-weight: 400;
}

@media (max-width: 1470px) {
    /* Medium screens: 3 items */
    .flex-item {
        flex: 1 1 calc(25% - 16px);
        max-width: calc(25% - 24px);

    }

    .flex-container {
        padding: 16px 48px !important;
    }
}

@media (max-width: 1270px) {
    /* Medium screens: 3 items */
    .flex-item {
        flex: 1 1 calc(33.33% - 16px);
        max-width: calc(33.33% - 24px);
    }
    .flex-container {
        padding: 16px 48px !important;
    }
}

@media (max-width: 992px) {
    /* Tablet: 2 items */
    .flex-item {
        flex: 1 1 calc(50% - 16px);
        max-width: calc(50% - 24px);
    }
    .flex-container {
        padding: 16px 48px !important;
    }
}
/* ... */

